--- a/killrvideo-service-users/pom.xml
+++ b/killrvideo-service-users/pom.xml
@@ -28,6 +28,12 @@
 			<groupId>com.datastax</groupId>
 			<artifactId>killrvideo-commons</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>ma.markware.charybdis</groupId>
+					<artifactId>charybdis-core</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
             <groupId>org.apache.commons</groupId>
