--- a/killrvideo-commons/pom.xml
+++ b/killrvideo-commons/pom.xml
@@ -167,6 +167,7 @@
             <configuration>
               <sources>
                 <source>target/generated-sources/protobuf/java</source>
+                <source>src/generated/java</source>
               </sources>
             </configuration>
           </execution>
