--- a/killrvideo-service-ratings/pom.xml
+++ b/killrvideo-service-ratings/pom.xml
@@ -68,6 +68,7 @@
 							<sources>
 								<source>target/generated-sources/protobuf/java</source>
 								<source>target/generated-sources/protobuf/grpc-java</source>
+								<source>src/generated/java</source>
 							</sources>
 						</configuration>
 					</execution>
