--- a/killrvideo-service-sugestedvideo/pom.xml
+++ b/killrvideo-service-sugestedvideo/pom.xml
@@ -52,6 +52,7 @@
 							<sources>
 								<source>target/generated-sources/protobuf/java</source>
 								<source>target/generated-sources/protobuf/grpc-java</source>
+								<source>src/generated/java</source>
 							</sources>
 						</configuration>
 					</execution>
